# sami-lane-portfolio

./: LICENSE  README.md  pyproject.toml
configs/: demo_config.yaml
projects/: genomics-dashboard.md
projects/genomics-dashboard/: README.md  requirements.txt
repos/genomics-variant-explorer/: README.md  app.py
repos/genomics-variant-explorer/data/: variants.csv
scripts/: __init__.py  generate_synthetic_multiomics.py
src/biomarker_explorer/: __init__.py  config.py  dashboard.py  data_io.py  integration.py  modeling.py  pipeline.py  preprocessing.py  visualization.py
tests/: test_pipeline.py
