[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "biomarker-explorer"
version = "0.1.0"
description = "Integrative multi-omics biomarker discovery toolkit"
readme = "README.md"
authors = [
    { name = "Samantha Lane", email = "slane21@jh.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "streamlit>=1.28",
    "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.9",
    "isort>=5.12",
    "mypy>=1.6"
]

[project.urls]
Homepage = "https://github.com/splane00/sami-lane-portfolio"
Issues = "https://github.com/splane00/sami-lane-portfolio/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["biomarker_explorer"]
